--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   supercharged: ^2.1.1
   awesome_dialog: ^3.1.0
   scratcher: ^2.3.0
+  liquid_pull_to_refresh: ^3.0.1
+  pretty_animated_buttons: ^0.0.1
 
 dev_dependencies:
   flutter_test:
