--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   scratcher: ^2.3.0
   liquid_pull_to_refresh: ^3.0.1
   pretty_animated_buttons: ^0.0.1
+  flutter_screenutil: ^5.8.4
+  google_fonts: ^5.1.0
+  rive: ^0.11.5
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +69,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/
+    - assets/animated_app/avaters/
+    - assets/animated_app/Backgrounds/
+    - assets/animated_app/Fonts/
+    - assets/animated_app/icons/
+    - assets/animated_app/RiveAssets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
