--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   google_fonts: ^5.1.0
   rive: ^0.11.5
   flutter_svg: ^2.0.7
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.3
+  cloud_functions: ^4.3.4
+  firebase_auth: ^4.7.1
 
 dev_dependencies:
   flutter_test:
