--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/flutter_animated_images/
     - assets/animated_app/avaters/
     - assets/animated_app/Backgrounds/
     - assets/animated_app/Fonts/
