--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   shimmer: ^3.0.0
   timeline_tile: ^2.0.0
   google_maps_flutter: ^2.4.0
+  dio: ^5.3.2
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
+  freezed_annotation: ^2.4.1
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +68,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.6
-  freezed: ^2.4.1
-  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
