--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   timeline_tile: ^2.0.0
   google_maps_flutter: ^2.4.0
   dio: ^5.3.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
